fix shoping cart z-index and scrollbar

--- a/src/app/components/shoping-cart/shoping-cart.component.scss
+++ b/src/app/components/shoping-cart/shoping-cart.component.scss
@@ -3,7 +3,7 @@
 
 .modal {
   position: absolute;
-  // z-index: 100;
+  z-index: 100;
   right: 0px;
   top: 0px;
   height: 100%;
