--- a/src/assets/style/_base.scss
+++ b/src/assets/style/_base.scss
@@ -49,3 +49,8 @@
   font-size: 16px;
   line-height: normal;
 }
+
+.modal-window {
+  overflow-y: hidden;
+  padding-right: 16px;
+}
